# CodePad

./: .gitignore  CMakeLists.txt  example.txt  index.html  main.cpp
monaco/: index.html  index2.html  inputHandler.js  monaco.js  server.py
monaco-vite/: index.html
monaco-vite/public/src/: main.js
monaco-vite/src/: main.js  style.css
monaco-vite/src/ANTLR/: CLexer.js  CListener.js  CParser.js
monaco-vite/src/static/: common.js  inputHandler.js  monaco.js  parser.js  suggestions.js
monaco/static/: index.css  index.js  inputHandler.js  monaco.js  parser.js  suggestions.js
